SFDCProject/src/objects/Referral_Input__c.object
<CustomObject>
    <description>We are collecting the referred by and referred to in this object. In some cases, we will have the account id and contact id, and in some we will not, hence the other fields such as first name, last name etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador_Sync_Details__c</fullName>
        <inlineHelpText>If there is any error while syncing this referral to Ambassador system, then details of the error are captured in this field.</inlineHelpText>
        <label>Ambassador Sync Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador_Sync_Field__c</fullName>
        <inlineHelpText>There are multiple referral status and payment status fields in lead. Each of any one of them is updated, we need to sync that field to Ambassador. This field captures the which referral or payment field to sync.</inlineHelpText>
        <label>Ambassador Sync Field</label>
        <picklist>
            <picklistValues>
                <fullName>Field 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ambassador_Sync_Status__c</fullName>
        <inlineHelpText>Indicates the status of syncing this referral to ambassador system for referral commission updates.</inlineHelpText>
        <label>Ambassador Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_or_Qualified_For_Payment__c</fullName>
        <formula>IF(  ISPICKVAL(Milestone_1_Status__c, &quot;&quot;), 0,  Referee_Payment_1_Amount__c + Referrer_Payment_1_Amount__c ) 
+ 
IF(  ISPICKVAL(Milestone_2_Status__c, &quot;&quot;), 0,  Referee_Payment_2_Amount__c + Referrer_Payment_2_Amount__c ) 
+
IF(  ISPICKVAL(Milestone_3_Status__c, &quot;&quot;), 0,  Referee_Payment_3_Amount__c + Referrer_Payment_3_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid/Qualified For Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <formula>TEXT(  Service_Contract__r.Billing_Method__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Tracking_Number__c</fullName>
        <description>Will be populated via data loader
Refer SWR-6671 in Jira</description>
        <label>Card Tracking Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Service_Contract__r.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Target_Contact_Email__c</fullName>
        <formula>IF( Target_Contact_Id__c=null, Lead__r.Email, Target_Contact_Id__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Target Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Target_Contact_First_Name__c</fullName>
        <formula>IF( Target_Contact_Id__c=null, Lead__r.FirstName , Target_Contact_Id__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Target Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Target_Contact_Last_Name__c</fullName>
        <formula>IF( Target_Contact_Id__c=null,  Lead__r.LastName ,  Target_Contact_Id__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Target Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Target_Contact_Phone__c</fullName>
        <formula>IF( Target_Contact_Id__c=null, Lead__r.Phone, Target_Contact_Id__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Target Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Target_Contact_Salutation__c</fullName>
        <formula>IF( Target_Contact_Id__c=null, Text(Lead__r.Salutation) , Text(Target_Contact_Id__r.Salutation))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Target Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <formula>Service_Contract__r.Contact.LastName  + &apos;, &apos; +  Service_Contract__r.Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_Status__c</fullName>
        <formula>if(NOT(ISBLANK(Generation_Asset__c)),  Generation_Asset__r.Reported_Status__c, if(NOT(ISBLANK(Opportunity__c)),  Opportunity__r.Reported_Status__c,  Lead__r.Reported_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Portal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Utility__c</fullName>
        <formula>TEXT(Generation_Asset__r.ERP_Utility__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Contact_Data_Here__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + if( ISBLANK(Opportunity__c), Lead__c , Id), &quot;Click here to edit contacts&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Contact Data Here</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gen_Asset_Number__c</fullName>
        <formula>Generation_Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gen Asset Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <formula>Service_Contract__r.Install_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_How_did_you_hear_about_us__c</fullName>
        <formula>TEXT(Lead__r.How_did_you_hear_about_us__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead: How did you hear about us?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Lead__r.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT(Lead__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Status__c</fullName>
        <label>Referral Payout 1 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Status__c</fullName>
        <label>Referral Payout 2 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_3_Status__c</fullName>
        <label>Referral Payout 3 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <formula>Generation_Asset__r.PTO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Date_Milestone_1__c</fullName>
        <label>Referral Payout 1 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Date_Milestone_2__c</fullName>
        <label>Referral Payout 2 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Date_Milestone_3__c</fullName>
        <label>Referral Payout 3 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referee_Contact_s_Email__c</fullName>
        <formula>Target_Contact_Id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Contact&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Contact_s_Mailing_Address__c</fullName>
        <formula>Target_Contact_Id__r.MailingStreet + &apos; &apos; +  Target_Contact_Id__r.MailingCity + &apos; &apos; +  Target_Contact_Id__r.MailingState + &apos; &apos; +  Target_Contact_Id__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Contact&apos;s Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Contact_s_State__c</fullName>
        <formula>Target_Contact_Id__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Contact&apos;s State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_1__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_1__c</formula>
        <label>Referee Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_2__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_2__c</formula>
        <label>Referee Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Non_Monetary_Compensation_3__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_3__c</formula>
        <label>Referee Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_1_Amount__c</fullName>
        <formula>IF( NULLVALUE(Promotion__r.Referee_Payment_Amount1__c,0) &gt; 0,Promotion__r.Referee_Payment_Amount1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Payment 1 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_2_Amount__c</fullName>
        <formula>IF( NULLVALUE(Promotion__r.Referee_Payment_Amount2__c,0) &gt; 0,Promotion__r.Referee_Payment_Amount2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Payment 2 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payment_3_Amount__c</fullName>
        <formula>IF( NULLVALUE(Promotion__r.Referee_Payment_Amount3__c,0) &gt; 0,Promotion__r.Referee_Payment_Amount3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Payment 3 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referee_Payout_Date_1__c</fullName>
        <label>Referee Payout Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referee_Payout_Date_2__c</fullName>
        <label>Referee Payout Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referee_Payout_Date_3__c</fullName>
        <label>Referee Payout Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referee_Status_1__c</fullName>
        <label>Referee Status 1</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referee_Status_2__c</fullName>
        <label>Referee Status 2</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referee_Status_3__c</fullName>
        <label>Referee Status 3</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Report_State__c</fullName>
        <formula>IF(
AND(NULLVALUE( Opportunity__c,&apos;&apos;)=&apos;&apos;, NULLVALUE(Lead__c,&apos;&apos;) != &apos;&apos;),&apos;Lead Created&apos;,
IF(
AND(NULLVALUE( Opportunity__c,&apos;&apos;) != &apos;&apos;, NULLVALUE(Service_Contract__c,&apos;&apos;)=&apos;&apos;),&apos;Opportunity Created / Lead Converted&apos;,
IF(AND(NULLVALUE( Opportunity__c,&apos;&apos;) != &apos;&apos;, NULLVALUE(Service_Contract__c,&apos;&apos;) != &apos;&apos;, NOT(ISNULL(  Service_Contract__r.Service_Contract_Event__r.PTO__c  ))),&apos;Service Contract PTO granted&apos;,&apos;Opportunity Closed Won&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Report State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <picklist>
            <picklistValues>
                <fullName>Solar Qualification In-progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready for Solar Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Consultation In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Install In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Install Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Install Complete (for Direct Deals)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Install Complete (for Channel Deals)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact_Victim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backup of the Bad Contact</description>
        <label>Referrer Contact  (Victim)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Referrer Contact  (Victim))</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact_s_Email__c</fullName>
        <formula>Source_Contact_Id__r.Email</formula>
        <label>Referrer Contact&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact_s_Mailing_Address__c</fullName>
        <formula>Source_Contact_Id__r.MailingStreet + &apos; &apos; +  Source_Contact_Id__r.MailingCity + &apos; &apos; +  Source_Contact_Id__r.MailingState + &apos; &apos; +  Source_Contact_Id__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Contact&apos;s Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact_s_State__c</fullName>
        <formula>Source_Contact_Id__r.MailingState</formula>
        <label>Referrer Contact&apos;s State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_1__c</fullName>
        <formula>Promotion__r.Referrer_Non_Monetary_Compensation_1__c</formula>
        <label>Referrer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_2__c</fullName>
        <formula>Promotion__r.Referrer_Non_Monetary_Compensation_2__c</formula>
        <label>Referrer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Non_Monetary_Compensation_3__c</fullName>
        <formula>Promotion__r.Referrer_Non_Monetary_Compensation_3__c</formula>
        <label>Referrer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_1_Amount__c</fullName>
        <formula>IF( NULLVALUE( Promotion__r.Referrer_Payment_Amount1__c ,0) &gt; 0,Promotion__r.Referrer_Payment_Amount1__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Payment 1 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_2_Amount__c</fullName>
        <formula>IF( NULLVALUE( Promotion__r.Referrer_Payment_Amount2__c ,0) &gt; 0,Promotion__r.Referrer_Payment_Amount2__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Payment 2 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payment_3_Amount__c</fullName>
        <formula>IF( NULLVALUE( Promotion__r.Referrer_Payment_Amount3__c ,0) &gt; 0,Promotion__r.Referrer_Payment_Amount3__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Payment 3 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payout_Date_1__c</fullName>
        <label>Referrer Payout Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Payout_Date_2__c</fullName>
        <label>Referrer Payout Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Payout_Date_3__c</fullName>
        <label>Referrer Payout Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Status_1__c</fullName>
        <label>Referrer Status 1</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Status_2__c</fullName>
        <label>Referrer Status 2</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Status_3__c</fullName>
        <label>Referrer Status 3</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>Populate sales rep email from service contract</description>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event_RR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Event(RR)</label>
        <referenceTo>Service_Contract_Event__c</referenceTo>
        <relationshipLabel>Referrals (Service Contract Event(RR))</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Event</label>
        <referenceTo>Service_Contract_Event__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Number__c</fullName>
        <formula>Service_Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_RR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract (RR)</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Referrals (Service Contract (RR))</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Account_Name__c</fullName>
        <label>Source Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Address_City__c</fullName>
        <label>Source Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Address_Country__c</fullName>
        <label>Source Address Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Address_Postal_Code__c</fullName>
        <label>Source Address Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Address_State__c</fullName>
        <label>Source Address State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Address_Street__c</fullName>
        <label>Source Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Contact_ERP_Flag__c</fullName>
        <formula>IF( Source_Contact_Id__r.ERP_Contact_of_Record__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Contact ERP Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Email__c</fullName>
        <label>Source Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source_Contact_First_Name__c</fullName>
        <label>Source Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>